apps/home/spoolman/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spoolman
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      component: app
  template:
    metadata:
      labels:
        component: app
    spec:
      enableServiceLinks: false
      containers:
        - name: spoolman
          image: ghcr.io/donkie/spoolman:0.26.1@sha256:cf9b41e17b93ce7d4ca584d9809142f8918fd290f2cd7d3b8b12ff76c75482f0
          imagePullPolicy: IfNotPresent
          securityContext:
            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 1000
            allowPrivilegeEscalation: false
            capabilities:
              drop: [ALL]
          ports:
            - name: http
              containerPort: 8000
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              memory: 1Gi
          startupProbe:
            httpGet:
              path: /api/v1/health
              port: http
            failureThreshold: 60
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /api/v1/health
              port: http
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/v1/health
              port: http
            periodSeconds: 30
