apps/home/spoolman/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: spoolman
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`spoolman.red.orleans.io`)
      kind: Rule
      services:
        - name: spoolman
          port: 8000
      middlewares:
        - name: forward-auth
          namespace: spoolman
  tls:
    secretName: wildcard-orleans-io
---
apiVersion: v1
kind: Service
metadata:
  name: spoolman
spec:
  selector:
    component: app
  ports:
    - name: http
      port: 8000
      targetPort: http
